# colonium

./: .gitignore  LICENSE  README.md  SECURITY.md  perplexity_export.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  codeql.yml
colonia/: __init__.py  artifacts.py  capabilities.py  cli.py  config.py  consolidator.py  mcp_server.py  model_settings.py  models.py  orchestrator.py  placeholders.py  pools.py  prompt_profiles.py  runner.py  sessions.py  text.py  wave.py
colonia/adapters/: __init__.py  base.py  dom.py  grok.py  perplexity.py
colonia/browser/: __init__.py  launcher.py
colonia/desktop/: __init__.py  linux.py
colonium/: __init__.py  artifacts.py  capabilities.py  cli.py  config.py  consolidator.py  mcp_server.py  model_settings.py  models.py  orchestrator.py  pools.py  runner.py  sessions.py  wave.py
colonium/adapters/: __init__.py  base.py  dom.py  grok.py  perplexity.py
colonium/browser/: __init__.py  launcher.py
colonium/desktop/: __init__.py  linux.py  manager.py
scripts/: check_repo_hygiene.py  diagnose_alpha.py  diagnose_gemini.py  diagnose_gemini_fresh.py  diagnose_gemini_runner.py  diagnose_gemini_runner2.py  diagnose_gemini_tab.py  diagnose_grok.py  live_test_alpha.py  probe_send.py
tests/: test_colonia.py  test_colonium.py  test_public_repo_hygiene.py  test_release_readiness.py  test_response_handling.py
