[project]
name = "colonia"
version = "0.1.0"
description = "Non-API LLM council for research and consulting workflows through local browser sessions"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = [
    "ai",
    "browser-automation",
    "llm",
    "mcp",
    "research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.8.0",
    "playwright>=1.49.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/mashcthomson/colonium"
Repository = "https://github.com/mashcthomson/colonium"
Issues = "https://github.com/mashcthomson/colonium/issues"

[project.optional-dependencies]
dev = [
    "bandit>=1.9",
    "build>=1.2",
    "detect-secrets>=1.5",
    "pip-audit>=2.10",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that need live browser CDP",
]

[project.scripts]
colonia = "colonia.cli:main"
colonia-mcp = "colonia.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["colonia"]

[tool.ruff]
line-length = 100
target-version = "py311"
